log
Thu Mar 25 02:42:03 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘createList’:
list.c:33:11: error: ‘L’ is used uninitialized in this function [-Werror=uninitialized]
   L->head = NULL;
           ^
cc1: all warnings being treated as errors
Compilation failed
Thu Mar 25 02:42:58 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ff62b3f
Thu Mar 25 02:49:14 UTC 2021: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
28d1149
Thu Mar 25 03:11:56 UTC 2021: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  0|0
2ce3c8f
Thu Mar 25 03:12:34 UTC 2021: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
0e4f0d8
Thu Mar 25 03:15:35 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
ab7e7fe
Thu Mar 25 03:18:23 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0450e42
Thu Mar 25 03:18:55 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6a418d3
Thu Mar 25 03:19:24 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
70ca3c4
Thu Mar 25 03:19:47 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f242cc4
Thu Mar 25 03:23:09 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1e5d14a
Thu Mar 25 03:24:01 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
90eae76
Thu Mar 25 03:25:59 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ac03ccc
Thu Mar 25 03:26:39 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c67cb7f
Thu Mar 25 03:31:44 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
e72ff53
Thu Mar 25 03:32:35 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
236f01e
Thu Mar 25 03:33:35 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
87ab85d
Thu Mar 25 03:34:42 UTC 2021: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
7398dec
Thu Mar 25 03:45:33 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
cfe20b0
Thu Mar 25 03:52:51 UTC 2021: 
 list.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
023070f
Thu Mar 25 03:57:31 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5610786
Thu Mar 25 03:59:38 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
18a6337
Thu Mar 25 04:02:01 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0cc59aa
Thu Mar 25 04:03:26 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
1e17034
Thu Mar 25 04:04:05 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
2db406c
Fri Mar 26 02:45:21 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
47d4f83
Fri Mar 26 03:14:10 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e817b40
Fri Mar 26 03:28:13 UTC 2021: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  9|3
total_score: 35/70
fafd8bd
Fri Mar 26 03:28:51 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e41589d
Fri Mar 26 03:30:00 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0aec638
Fri Mar 26 03:32:09 UTC 2021: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
9c78b3d
Fri Mar 26 03:36:38 UTC 2021: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
23bddd0
Fri Mar 26 03:54:03 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
295576d
Fri Mar 26 03:55:21 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
ffa6abf
Fri Mar 26 03:58:34 UTC 2021: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 45/70
9a2c4d4
Fri Mar 26 03:59:10 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
cab8574
Fri Mar 26 04:02:41 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f5283ec
Fri Mar 26 04:03:17 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e28d9af
Fri Mar 26 04:05:04 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e23f244
Fri Mar 26 04:10:54 UTC 2021: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
8bbed9c
Fri Mar 26 04:20:08 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
f3c4a06
Fri Mar 26 04:20:29 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dc4ba35
Fri Mar 26 04:20:48 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
f07f93f
Fri Mar 26 04:24:32 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4399032
Fri Mar 26 04:26:28 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f517b51
Fri Mar 26 04:26:53 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
82a9276
Fri Mar 26 04:28:35 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
c5f81fb
Fri Mar 26 04:33:22 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
925480b
Fri Mar 26 15:34:51 UTC 2021: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
49342ff
Fri Mar 26 15:37:22 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
7b2da57
Fri Mar 26 15:38:22 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
545d556
Fri Mar 26 15:38:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
251d1aa
Mon Mar 29 14:17:21 UTC 2021: 
 list.c | 57 ++++++++++++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 46 insertions(+), 11 deletions(-)
free(): double free detected in tcache 2
free(): double free detected in tcache 2
 tests:  0|0
free(): double free detected in tcache 2
8e60149
Mon Mar 29 14:21:39 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
free(): double free detected in tcache 2
free(): double free detected in tcache 2
 tests:  0|0
free(): double free detected in tcache 2
8a5e745
Mon Mar 29 14:35:11 UTC 2021: 
 list.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  0|0
18c7058
Mon Mar 29 14:48:07 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a74984a
Mon Mar 29 14:48:42 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
08a4045
Mon Mar 29 14:49:44 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
3904e45
Mon Mar 29 15:07:50 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
73a76e5
Mon Mar 29 15:12:50 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
28b7afe
Mon Mar 29 21:23:30 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
eef019c
Wed Mar 31 04:11:08 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e8818e8
Wed Mar 31 04:13:43 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b45b213
Wed Mar 31 04:15:20 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c78b001
Wed Mar 31 04:17:06 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ccb7bb
Wed Mar 31 04:18:21 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4333bf9
Wed Mar 31 04:19:03 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
1625fdf
Wed Mar 31 04:21:47 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
d895df7
Wed Mar 31 04:22:24 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ed71ad3
Wed Mar 31 04:31:09 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ff8e651
Wed Mar 31 12:48:50 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b8459f8
